@startuml
'https://plantuml.com/class-diagram

App <|-- Person
App <|-- readfromCSV


class App {
+main()
+printerTime()
}

class Person {
-firstName
-lastName
-salary
+getFirstName()
+getLastName()
+getSalary()
+setFirstName()
+setLastName()
+setSalary()
+createPerson()
}

class readfromCSV {
+readIn ()
+scanIn()
}

@enduml